--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
   "bugs": {
     "url": "https://github.com/WileESpaghetti/dropbox-upload-widget/issues"
   },
-  "homepage": "https://github.com/WileESpaghetti/dropbox-upload-widget#readme"
+  "homepage": "https://github.com/WileESpaghetti/dropbox-upload-widget#readme",
+  "dependencies": {
+    "dev": "^0.1.3",
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13"
+  }
 }
