--- a/package.json
+++ b/package.json
@@ -15,15 +15,22 @@
     "media",
     "manager"
   ],
-  "author": "Lehman Black",
-  "license": "GPL-2.0",
+  "author": {
+    "name": "Lehman Black",
+    "url": "https://github.com/WileESpaghetti"
+  },
+  "license": {
+    "type": "MIT",
+    "url": "https://opensource.org/licenses/MIT"
+  },
   "bugs": {
     "url": "https://github.com/WileESpaghetti/dropbox-upload-widget/issues"
   },
   "homepage": "https://github.com/WileESpaghetti/dropbox-upload-widget#readme",
-  "dependencies": {
-    "dev": "^0.1.3",
+  "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13"
+    "grunt-banner": "^0.6.0",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-copy": "^0.8.2"
   }
 }
