--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "grunt-banner": "^0.6.0",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-copy": "^0.8.2",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-string-replace": "^1.2.1"
   }
 }
